<resources>
    <string name="shop_goods">商品管理</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="simple_chinese">简体中文</string>
    <string name="english">English</string>
    <string name="russian">Pусский</string>
    <string name="desc"></string>
    <string name="website">www.osell.com</string>
    <string name="more_pic">●●●</string>
    <string name="nickname">昵称</string>
     <string name="public_number">公众号</string>
    <string name="please_input_phone_number">请输入手机号码</string>
    <string name="check_phone_number_hint">手机号格式不正确,请输入正确的手机号</string>
    <string name="please_input_pwd">请设置密码</string>
    <string name="please_input_request_reason_hint">请输入请求内容</string>
    <string name="please_input_confim_pwd">请确认密码</string>
    <string name="check_pwd_hint">前后密码不一致,请重新输入</string>
    <string name="starting">启动服务.</string>
    <string name="get_valid_code">获取验证码</string>
    <string name="please_input_old_new_confirm">请输入旧密码、新密码、确认密码</string>
    <string name="new_old_pwd_not_equalse">新密码和旧密码一样,请重新设置</string>
    <string name="nickname_length_hint">昵称长度为2~8个字</string>
    <string name="group_name_length_hint">名字限制2-8个字</string>
    <string name="group_nickname_length_hint">我的群昵称为2~8个字</string>
    <string name="remark_length_hint">备注名为2~8个字</string>
    <string name="sign_length_hint">个性签名长度在30个字以内</string>
    <string name="please_input_valid_hint">请输入验证码</string>
    <string name="check_protrol_hint">请阅读并同意注册协议</string>
    <string name="register_faile">注册失败,请稍后再试...</string>
    <string name="commit_data_error">提交数据失败!</string>
    <string name="set_top_item">置顶聊天</string>
    <string name="cancle_top_item">取消置顶</string>
    <string name="del_chat">删除聊天</string>
    <string name="del">删除</string>
    <string name="has_new_notification">有新通告</string>
    <string name="exception_out_of_memory">图片太大，处理失败！</string>
    <string name="zhang">张</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="send_moving_error">分享失败</string>
    <string name="send_moving_success">分享成功</string>
    <string name="confirm_send">确定发送</string>
    <string name="from_card_to_chat">名片到当前聊天?</string>
    <string name="tui_user">推荐人员</string>
    <string name="my_focus">我的关注者</string>
    <string name="fen_list">粉丝列表</string>
    <string name="focus_list">关注列表</string>
    <string name="please_input_group_nickname">请填写群昵称在提交</string>
    <string name="please_modify_content">请修改内容后在提交!</string>
    <string name="please_input_your_group_nickname">请填写你的群组昵称在提交!</string>
    <string name="please_input_comment_contnet">请输入你要评论的内容</string>
    <string name="are_you_change_bg">你确定要更换背景吗？</string>
    <string name="please_select_map">请选择地图在发送</string>
    <string name="group_list">群组列表</string>
    <string name="ochat_app_name">承芯</string>
    <string name="user_login">用户登录</string>
    <string name="user_not_exits">用户不存在!</string>
    <string name="please_select_system_to_sign_in">请选择登陆系统</string>
    <string name="visit_website">访问官网:</string>
    <string name="chat">消息</string>
    <string name="contacts">通讯录</string>
    <string name="find_tab">发现</string>
    <string name="profile_tab">我</string>
    <string name="ss">未完结订单</string>
    <string name="finished">已完结订单</string>
    <string name="ss_status">未完结</string>
    <string name="finished_status">已完结</string>
    <string name="amount">总金额</string>
    <string name="order_status">订单状态</string>
    <string name="shipped_out">已出货</string>
    <string name="system">系统</string>
    <string name="order_time">下单时间</string>
    <string name="order_tracking">订单跟踪</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="confirm_exit">是否退出思八达？</string>
    <string name="watch_tou_piao">投票成功!</string>
    <string name="watch_pic">查看图片</string>
    <string name="exit">退出</string>
    <string name="cancel">取消</string>
    <string name="profile_infor">个人资料</string>
    <string name="profile_detail">详细资料</string>
    <string name="notification">通知</string>
    <string name="scan_qr_code">扫一扫</string>
    <string name="blocked_list">黑名单</string>
    <string name="feedback">意见反馈</string>
    <string name="set_feedback">反馈意见</string>
    <string name="help">帮助中心</string>
    <string name="check_for_updates">检测新版本</string>
    <string name="about_us">关于承芯</string>
    <string name="saoyisao">扫一扫</string>
    <string name="my_location_prompt">我的位置</string>
    <string name="setting">设置</string>
    <string name="new_chat">新会话</string>
    <string name="edit">编辑</string>
    <string name="just_now">刚刚</string>
    <string name="hour">小时</string>
    <string name="minutes">分</string>
    <string name="minutes_time">分钟</string>
    <string name="second">秒</string>
    <string name="before">前</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="input_orderno_orderstatus">输入订单号</string>
    <string name="remember_pwd">记住密码</string>
    <string name="continuetorefresh">下拉可以刷新</string>
    <string name="starttorefresh">松开可以刷新</string>
    <string name="refreshloading">加载中...</string>
    <string name="updatetime">更新于:</string>
    <string name="loading_system">加载系统...</string>
    <string name="network_error">Network Error</string>
    <string name="unknown_addr">Unknown Address</string>
    <string name="error_host">Unknown Host</string>
    <string name="timeout">网络访问超时</string>
    <string name="load_error">数据加载出错</string>
    <string name="loading_login">登录中...</string>
    <string name="login_error">登录失败</string>
    <string name="please_input_username">请输入用户名</string>
    <string name="please_input_password">请输入密码</string>
    <string name="add_more">加载更多</string>
    <string name="no_more_data">没有更多信息</string>
    <string name="add_more_loading">加载中...</string>
    <string name="profile">详细信息</string>
    <string name="fullname">姓名</string>
    <string name="region">国籍</string>
    <string name="what_up">个性签名</string>
    <string name="send_message">发送消息</string>
    <string name="alias">备注名</string>
    <string name="alias_info">备注信息</string>
    <string name="reported">举报</string>
    <string name="add_block">加入黑名单</string>
    <string name="delete_friend">删除</string>
    <string name="back">返回</string>
    <string name="toast_sdcard_mounted">SD卡拔出，不能使用某些功能!</string>
    <string name="toast_sdcard_available">SD卡存储空间不足!</string>
    <string name="ok">确定</string>
    <string name="screenshot">截图</string>
    <string name="copy_order_no">复制订单号</string>
    <string name="order_detail">订单详细</string>
    <string name="commodity_total_money">商品总额</string>
    <string name="devliery_fee">运费</string>
    <string name="commodity_list">商品列表</string>
    <string name="order_price">订货价</string>
    <string name="sales_price">销售价</string>
    <string name="count">数量</string>
    <string name="pay_way">支付方式</string>
    <string name="delivery_way">配送方式</string>
    <string name="delivery_time">配送时间</string>
    <string name="delivery_date">送货日期</string>
    <string name="cancel_order">取消订单</string>
    <string name="search">搜索</string>
    <string name="chat_detail">详情</string>
    <string name="chat_detail_title">聊天信息</string>
    <string name="clear_chat_message">清空聊天记录</string>
    <string name="find_chat_message">查找聊天记录</string>
    <string name="clear_chat_info_prompt">确定要清空聊天记录？</string>
    <string name="apply_view_user_info">申请查看个人资料</string>
    <string name="system_info">系统消息</string>
    <string name="apply_friend">申请添加您为好友</string>
    <string name="deleted_by_friend">已经将您移出好友列表</string>
    <string name="add_friend_success">已经同意添加您为好友</string>
    <string name="refused_friend_success">拒绝添加您为好友</string>
    <string name="invited_user_room">邀请你进入房间</string>
    <string name="logout">退出登录</string>
    <string name="osell_app_name">外贸电商销售</string>
    <string name="copyright">承芯（www.congratst.com）版权所有</string>
    <string name="operation_help">操作帮助</string>
    <string name="help_center">帮助中心</string>
    <string name="delivery_type">货运方式</string>
    <string name="delivery_no">货运单号</string>
    <string name="product_detail">商品详细</string>
    <string name="product_name">产品名称</string>
    <string name="product_brands">产品品牌</string>
    <string name="product_key">产品ID</string>
    <string name="product_sale_price">产品卖价</string>
    <string name="product_cost">产品成本</string>
    <string name="product_favor">喜好</string>
    <string name="product_description">详细描述</string>
    <string name="product_params">规格参数</string>
    <string name="save">保存</string>
    <string name="remark_friend_success">修改备注名成功</string>
    <string name="remark_friend_failed">修改备注名失败</string>
    <string name="input_remark_name">请输入备注名</string>
    <string name="add_block_hint">加入黑名单后，无法收到TA的消息，确定要添加到黑名单么？</string>
    <string name="add_block_success">添加成功</string>
    <string name="remove_block_success">移除黑名单成功</string>
    <string name="set_star_success">已标为星标朋友</string>
    <string name="remove_star_success">已取消星标朋友</string>
    <string name="add_block_failed">添加失败</string>
    <string name="focus_user_success">关注好友成功</string>
    <string name="focus_user_failed">关注好友失败</string>
    <string name="delete_friend_prompt">确定删除该好友?</string>
    <string name="delete_friend_success">删除成功</string>
    <string name="delete_friend_failed">删除失败</string>
    <string name="reported_content">举报内容</string>
    <string name="input_reported_content">请填写举报内容</string>
    <string name="select_reported_content">请选择举报内容</string>
    <string name="reported_friend_success">举报成功</string>
    <string name="reported_friend_failed">举报失败</string>
    <string name="cancel_block_success">取消成功</string>
    <string name="cancel_block_failed">取消失败</string>
    <string name="cancel_block">取消</string>
    <string name="say_nothing">说点什么</string>
    <string name="avilable">可用</string>
    <string name="freeze">冻结</string>
    <string name="withdraw">可提现</string>
    <string name="choose_pic">选择照片</string>
    <string name="user_sign">个性签名</string>
    <string name="last_name">名</string>
    <string name="first_name">姓</string>
    <string name="choose_country">选择所属国籍</string>
    <string name="camera">拍照</string>
    <string name="gallery">相册</string>
    <string name="feedback_success">反馈成功</string>
    <string name="feedback_fail">反馈失败</string>
    <string name="input_feedback_content">请填写反馈内容</string>
    <string name="add">添加</string>
    <string name="accept">接受</string>
    <string name="validing">等待验证</string>
    <string name="add_friend">添加朋友</string>
    <string name="find_friend">查找账号</string>
    <string name="group">分组</string>
    <string name="commit">提交</string>
    <string name="contact_name">联系人</string>
    <string name="contact_tel">联系电话</string>
    <string name="contact_addr">联系地址</string>
    <string name="desc_not_write">备注&#160;&#160;选填</string>
    <string name="merchant_name">商铺名称</string>
    <string name="merchant_loaction">商铺位置</string>
    <string name="merchant_tel_phone">联系手机</string>
    <string name="business_paper">营业执照</string>
    <string name="auth_paper">经销授权证书</string>
    <string name="btn_apply_protocol">入驻协议</string>
    <string name="chk_agree">同意</string>
    <string name="bank_name_hint">结账账户开户行</string>
    <string name="bank_user_hint">结账账户用户名</string>
    <string name="bank_account_hint">结账账户账号</string>
    <string name="shop_category_all">全部商品</string>
    <string name="shop_status_all">所有状态</string>
    <string name="shop_shelf_upload">确认上架</string>
    <string name="shop_shelf_download">确认下架</string>
    <string name="headicon">HeadIcon</string>
    <string name="financ_product_limit">额度</string>
    <string name="financ_product_repay">月供</string>
    <string name="financ_product_loan">放贷</string>
    <string name="imagedetail">ImageDetail</string>
</resources>