<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/title_layout"
        layout="@layout/title_layout" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fadingEdge="none"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/merchant_name"
                android:layout_width="fill_parent"
                android:layout_height="45dip"
                android:layout_marginBottom="20dip"
                android:background="@drawable/circle_circle_rond_n"
                android:gravity="center_vertical"
                android:hint="@string/merchant_name"
                android:padding="5dip"
                android:textColor="@color/application_black"
                android:textColorHint="@color/application_deep_gray_black"
                android:textSize="@dimen/sixteen" >

                <requestFocus />
                
			</EditText>
            
            <TextView
                android:id="@+id/merchant_location"
                android:layout_width="fill_parent"
                android:layout_height="45dip"
                android:layout_marginBottom="20dip"
                android:background="@drawable/circle_circle_rond_n"
                android:clickable="true"
                android:gravity="center_vertical"
                android:hint="@string/merchant_loaction"
                android:padding="5dip"
                android:textColor="@color/application_black"
                android:textColorHint="@color/application_deep_gray_black"
                android:textSize="@dimen/sixteen" />

            <EditText
                android:id="@+id/contact_name"
                android:layout_width="fill_parent"
                android:layout_height="45dip"
                android:layout_marginBottom="20dip"
                android:background="@drawable/circle_circle_rond_n"
                android:gravity="center_vertical"
                android:hint="@string/contact_name"
                android:padding="5dip"
                android:textColor="@color/application_black"
                android:textColorHint="@color/application_deep_gray_black"
                android:textSize="@dimen/sixteen" />

            <EditText
                android:id="@+id/contact_tel"
                android:layout_width="fill_parent"
                android:layout_height="45dip"
                android:layout_marginBottom="20dip"
                android:background="@drawable/circle_circle_rond_n"
                android:gravity="center_vertical"
                android:hint="@string/merchant_tel_phone"
                android:inputType="phone"
                android:padding="5dip"
                android:textColor="@color/application_black"
                android:textColorHint="@color/application_deep_gray_black"
                android:textSize="@dimen/sixteen" />

            <EditText
                android:id="@+id/contact_addr"
                android:layout_width="fill_parent"
                android:layout_height="45dip"
                android:layout_marginBottom="20dip"
                android:background="@drawable/circle_circle_rond_n"
                android:gravity="center_vertical"
                android:hint="@string/contact_addr"
                android:padding="5dip"
                android:textColor="@color/application_black"
                android:textColorHint="@color/application_deep_gray_black"
                android:textSize="@dimen/sixteen" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:baselineAligned="true"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/btn_business"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:clickable="true"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/business_paper" />

                    <ImageView
                        android:id="@+id/img_business"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:contentDescription="@string/business_paper"
                        android:src="@drawable/add_item_btn" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_auth"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:clickable="true"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/auth_paper" />

                    <ImageView
                        android:id="@+id/img_auth"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:contentDescription="@string/auth_paper"
                        android:src="@drawable/add_item_btn" />

                </LinearLayout>

            </LinearLayout>

            <EditText
                android:id="@+id/bank_name"
                android:layout_width="fill_parent"
                android:layout_height="45dip"
                android:layout_marginBottom="20dip"
                android:background="@drawable/circle_circle_rond_n"
                android:gravity="center_vertical"
                android:hint="@string/bank_name_hint"
                android:padding="5dip"
                android:textColor="@color/application_black"
                android:textColorHint="@color/application_deep_gray_black"
                android:textSize="@dimen/sixteen" />

            <EditText
                android:id="@+id/bank_user"
                android:layout_width="fill_parent"
                android:layout_height="45dip"
                android:layout_marginBottom="20dip"
                android:background="@drawable/circle_circle_rond_n"
                android:gravity="center_vertical"
                android:hint="@string/bank_user_hint"
                android:padding="5dip"
                android:textColor="@color/application_black"
                android:textColorHint="@color/application_deep_gray_black"
                android:textSize="@dimen/sixteen" />

            <EditText
                android:id="@+id/bank_account"
                android:layout_width="fill_parent"
                android:layout_height="45dip"
                android:layout_marginBottom="20dip"
                android:background="@drawable/circle_circle_rond_n"
                android:gravity="center_vertical"
                android:hint="@string/bank_account_hint"
                android:padding="5dip"
                android:textColor="@color/application_black"
                android:textColorHint="@color/application_deep_gray_black"
                android:textSize="@dimen/sixteen" />

            <EditText
                android:id="@+id/desc"
                android:layout_width="fill_parent"
                android:layout_height="125dip"
                android:layout_marginBottom="20dip"
                android:background="@drawable/circle_circle_rond_n"
                android:gravity="center_vertical|top"
                android:hint="@string/desc_not_write"
                android:padding="5dip"
                android:textColor="@color/application_black"
                android:textColorHint="@color/application_deep_gray_black"
                android:textSize="@dimen/sixteen" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" >

                <TextView
                    android:id="@+id/btn_protocol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:text="@string/btn_apply_protocol"
                    android:textColor="@color/application_black"
                    android:textSize="14sp" />

                <CheckBox
                    android:id="@+id/chk_agree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/btn_protocol"
                    android:button="@drawable/protocl_checkbox"
                    android:checked="true"
                    android:paddingLeft="5dp"
                    android:text="@string/chk_agree"
                    android:textSize="14sp" />

            </RelativeLayout>

            <Button
                android:id="@+id/commit_btn"
                android:layout_width="210dip"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/commit_order_btn"
                android:gravity="center"
                android:text="@string/commit"
                android:textColor="@color/application_deep_gray_black"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>