<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<include layout="@layout/title_layout" />
	
	<LinearLayout
	    android:id="@+id/tool_bar_layout"
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/tool_bar"
	    android:layout_below="@id/title_layout"
	    android:background="@color/application_gray"
	    android:orientation="horizontal">
	     
	    <Button
	        android:id="@+id/category_btn"
	        style="@style/actionbar_def_style"
	        android:layout_width="110dp"
	        android:layout_height="match_parent"
	        android:background="@color/application_gray"
	        android:text="@string/shop_category_all"
	        android:textColor="@color/text_color" />
	    
	    <Button
	        android:id="@+id/status_btn"
	        style="@style/actionbar_def_style"
	        android:layout_width="110dp"
	        android:layout_height="match_parent"
	        android:background="@color/application_gray"
	        android:text="@string/shop_status_all"
	        android:textColor="@color/text_color" />
	    
	</LinearLayout>
	
	<LinearLayout
	    android:id="@+id/bottom_bar_layout"
	    android:layout_width="match_parent"
	    android:layout_height="48dp"
	    android:layout_alignParentBottom="true"
	    android:background="@color/white"
	    android:orientation="horizontal" >
	     
	    <Button
	        android:id="@+id/upon_shelf_btn"
	        style="@style/actionbar_def_style"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:background="@color/white"
	        android:text="@string/shop_shelf_upload"
	        android:textColor="@color/text_color" />
	    
	    <Button
	        android:id="@+id/down_shelf_btn"
	        style="@style/actionbar_def_style"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:background="@color/white"
	        android:text="@string/shop_shelf_download"
	        android:textColor="@color/text_color" />
	    
	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_above="@id/bottom_bar_layout"
	    android:layout_below="@id/tool_bar_layout"
	    android:orientation="vertical"
	    android:visibility="visible" >

	    <ListView
	        android:id="@+id/shelf_list"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:background="@color/backgroud_color"
	        android:cacheColorHint="@null"
	        android:divider="@drawable/order_devider_line"
	        android:fadingEdge="none"
	        android:fastScrollEnabled="true"
	        android:focusable="true"
	        android:listSelector="@drawable/list_selector"
	        android:scrollbars="none" >
	    </ListView>
	</LinearLayout>
		
</RelativeLayout>
