<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef"
    android:orientation="vertical" >

    <include
        android:id="@+id/title_layout"
        layout="@layout/title_layout" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fadingEdge="none"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dip"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/contact_name"
                android:layout_width="fill_parent"
                android:layout_height="45dip"
                android:layout_marginBottom="20dip"
                android:background="@drawable/circle_circle_rond_n"
                android:gravity="center_vertical"
                android:hint="@string/contact_name"
                android:padding="5dip"
                android:textColor="@color/application_black"
                android:textColorHint="@color/application_deep_gray_black"
                android:textSize="@dimen/sixteen" />

            <EditText
                android:id="@+id/contact_tel"
                android:layout_width="fill_parent"
                android:layout_height="45dip"
                android:layout_marginBottom="20dip"
                android:background="@drawable/circle_circle_rond_n"
                android:gravity="center_vertical"
                android:hint="@string/contact_tel"
                android:inputType="phone"
                android:padding="5dip"
                android:textColor="@color/application_black"
                android:textColorHint="@color/application_deep_gray_black"
                android:textSize="@dimen/sixteen" />

            <EditText
                android:id="@+id/contact_addr"
                android:layout_width="fill_parent"
                android:layout_height="45dip"
                android:layout_marginBottom="20dip"
                android:background="@drawable/circle_circle_rond_n"
                android:gravity="center_vertical"
                android:hint="@string/contact_addr"
                android:padding="5dip"
                android:textColor="@color/application_black"
                android:textColorHint="@color/application_deep_gray_black"
                android:textSize="@dimen/sixteen" />

            <EditText
                android:id="@+id/pay_mode"
                android:layout_width="fill_parent"
                android:layout_height="45dip"
                android:layout_marginBottom="20dip"
                android:background="@drawable/circle_circle_rond_n"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="支付方式"
                android:padding="5dip"
                android:textColor="@color/application_black"
                android:textColorHint="@color/application_deep_gray_black"
                android:textSize="@dimen/sixteen" />

            <EditText
                android:id="@+id/desc"
                android:layout_width="fill_parent"
                android:layout_height="125dip"
                android:layout_marginBottom="20dip"
                android:background="@drawable/circle_circle_rond_n"
                android:gravity="center_vertical|top"
                android:hint="@string/desc_not_write"
                android:padding="5dip"
                android:textColor="@color/application_black"
                android:textColorHint="@color/application_deep_gray_black"
                android:textSize="@dimen/sixteen" />

            <Button
                android:id="@+id/commit_btn"
                android:layout_width="210dip"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/commit_order_btn"
                android:gravity="center"
                android:text="@string/commit"
                android:textColor="@color/application_deep_gray_black"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>